style.css
body{
    z-index: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.topnav{
    z-index: 1;
    font-size: 24px;
    position: fixed;
    top: 0px;
    left: 0px;
    padding-top: 10px;
    padding-left: 10px;
    height: 50px;
    display: block;
    background-color: white;
}

.nav th{
    width: 80%;
    text-align: left;
    padding-left: 20px;
    font-size: 24px;
}

.nav td{
    text-align: right;
    padding-right: 30px;
    font-size: 20px;
    color: #616161;
}



.landing{
    position: absolute;
    padding: 200px 100px;
}

.landpic{
    position: absolute;
    top: 140px;
    left: 750px;
}

#landpic{
    width: 350px;
}

.about{
    position: absolute;
    top: 550px;
    left: 100px;
    padding-bottom: 50px;
    padding-top: 50px;
    height: 550px;
}

.about th{
    width: 290px;
    padding-top: 15px;
    padding-left: 0px;
    vertical-align: top;
}

#profpic{
    width: 290px;
}

.about td{
    padding-left: 50px;
    padding-top: 0px;
    width: 700px;
    line-height: 1.3;
    font-size: 18px;
    vertical-align: top;
}

.prjs{
    position: absolute;
    margin-left: 100px;
    top: 1100px;
    padding-top: 50px;
}

.prjlist{
    margin-top: 30px;
}

.prjlist td{
    width: 325px;
    padding-right: 50px;
    padding-top: 0px;
    padding-bottom: 40px;
    text-align: center;
    vertical-align: top;
}

.prjlist img{
    height: 275px;
}

.contact{
    position: absolute;
    padding-left: 100px;
    padding-right: 100px;
    top: 2000px;
    padding-top: 50px;
    width: 100%;
    padding-bottom: 150px;
}

.cntres th, td{
    width: 600px;
    text-align: left;
    vertical-align: top;
}

#resumepic{
    height: 300px;
}

#resumepic:hover{
    opacity: 0.4;
}

.prjhome{
    position: absolute;
    padding-left: 100px;
    top: 100px;
}

.prjhome td{
    vertical-align: top;
    padding-right: 100px;
}

.prjhome img{
    padding-top: 30px;
}

h2{
    color: #ff9933;
    font-size: 46px;
  }
 
h4{
    color: #616161;
    font-size: 18px;
  }

h3{
    color: #ff9933;
    font-size: 30px;
}

hr{
    border: 1px solid #b5b5b5;
    text-align: center;
    padding-left: 50px;
    width: 85%;
}

.nav a{
    color: #616161;
}

.about a{
    color: black;
}

.prjlist a{
    color: black;
    text-decoration: none; 
}

.contact a{
    color: #616161;
    font-size: 18px;
}

.prjhome a{
    color: black;
}

a:hover{
    color:#ffa852;
    transition: 0.1s;
}

